update entity in each activity synchronously

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ customer.datasource.password=sa
 #customer.datasource.configuration.validation-query-timeout=30000
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 spring.h2.console.enabled: true
@@ -33,3 +33,5 @@ camunda-bpm.datasource.password=sa
 #camunda-bpm.datasource.configuration.validation-query-timeout=30000
 
 logging.level.com.camunda.consulting.two_ds=DEBUG
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
