--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <version>1.0.0-SNAPSHOT</version>
   
   <properties>
-    <spring-boot.version>2.7.5</spring-boot.version>
-    <camunda.version>7.17.0</camunda.version>
+    <spring-boot.version>2.7.14</spring-boot.version>
+    <camunda.version>7.19.8-ee</camunda.version>
 <!--     <camunda.version>7.17.0-ee</camunda.version> -->
   </properties>
 
@@ -51,10 +51,12 @@
       <artifactId>h2</artifactId>
     </dependency>
 
+<!-- 
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
+-->
 
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
     <dependency>
@@ -79,12 +81,12 @@
       <name>Camunda Maven Repository</name>
       <url>https://artifacts.camunda.com/public/</url>
     </repository>
-    <!-- enable this for EE dependencies (requires credentials in ~/.m2/settings.xml)
     <repository>
       <id>camunda-bpm-nexus-ee</id>
       <name>Camunda Enterprise Maven Repository</name>
       <url>https://artifacts.camunda.com/private/</url>
     </repository>
+    <!-- enable this for EE dependencies (requires credentials in ~/.m2/settings.xml)
     -->
   </repositories>
 
