Using two transaction managers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-customer.datasource.url=jdbc:h2:./customer-db1;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-customer.datasource.username=sa
-customer.datasource.password=sa
+#customer.datasource.url=jdbc:h2:./customer-db1;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#customer.datasource.username=sa
+#customer.datasource.password=sa
 
 #customer.datasource.configuration.initial-size=5
 #customer.datasource.configuration.max-total=10
@@ -20,9 +20,9 @@ camunda.bpm.admin-user.password: demo
 camunda.bpm.admin-user.firstName: Demo
 camunda.bpm.admin-user.lastName: Demo
 
-camunda-bpm.datasource.url=jdbc:h2:./camunda-db2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-camunda-bpm.datasource.username=sa
-camunda-bpm.datasource.password=sa
+#camunda-bpm.datasource.url=jdbc:h2:./camunda-db2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#camunda-bpm.datasource.username=sa
+#camunda-bpm.datasource.password=sa
 
 #camunda-bpm.datasource.configuration.initial-size=5
 #camunda-bpm.datasource.configuration.max-total=10
@@ -35,3 +35,31 @@ camunda-bpm.datasource.password=sa
 logging.level.com.camunda.consulting.two_ds=DEBUG
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.msdatasource.enabled=true
+spring.msdatasource.driver.class=org.h2.Driver
+spring.msdatasource.url=jdbc:h2:./customer-db1;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.msdatasource.username=sa
+spring.msdatasource.password=sa
+spring.msdatasource.hikari.maximumPoolSize=10
+spring.msdatasource.hikari.minimumIdle=5
+spring.msdatasource.hikari.cachePrepStmts=true
+spring.msdatasource.hikari.prepStmtCacheSize=250
+spring.msdatasource.hikari.prepStmtCacheSqlLimit=2048
+spring.msdatasource.hikari.useServerPrepStmts=true
+
+spring.camundadatasource.enabled=true
+spring.camundadatasource.driver.class=org.h2.Driver
+spring.camundadatasource.url=jdbc:h2:./camunda-db2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.camundadatasource.username=sa
+spring.camundadatasource.password=sa
+spring.camundadatasource.hikari.maximumPoolSize=10
+spring.camundadatasource.hikari.minimumIdle=5
+spring.camundadatasource.hikari.cachePrepStmts=true
+spring.camundadatasource.hikari.prepStmtCacheSize=250
+spring.camundadatasource.hikari.prepStmtCacheSqlLimit=2048
+spring.camundadatasource.hikari.useServerPrepStmts=true
+
+
+
+
